--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 			name="description"
 			content="Isaiah Paget's personal website for software development"
 		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto&family=VT323&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="canonical" href="https://isaiahpaget.com/" />
 		<title>Isaiah Paget</title>
 	</head>
