--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
 	<body>
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
+		<script src="https://kit.fontawesome.com/91ce943063.js" crossorigin="anonymous"></script>
 	</body>
 </html>
