--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta
+			name="title"
+			content="Isaiah Paget: Passionately Crafting Interactive Experiences."
+		/>
+		<meta
 			name="description"
-			content="Isaiah Paget's personal website for software development"
+			content="Passionate Canadian software engineer skilled in full-stack development, leading successful projects, and committed to crafting seamless, interactive apps."
 		/>
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
