--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta property="og:locale" content="en_US" />
+		<meta property="og:type" content="website" />
 		<meta
-			name="title"
-			content="Isaiah Paget: Passionately Crafting Interactive Experiences."
+			property="og:title"
+			content="Software Developer &amp; Web Design | Isaiah Paget"
 		/>
 		<meta
-			name="description"
-			content="Passionate Canadian software engineer skilled in full-stack development, leading successful projects, and committed to crafting seamless, interactive apps."
+			property="og:description"
+			content="Canadian software engineer skilled in full-stack development, passionately leading successful projects, and committed to crafting seamless, interactive apps."
 		/>
+		<meta property="og:url" content="https://isaiahpaget.ca/" />
+		<meta
+			property="og:site_name"
+			content="Isaiah Paget | Software Developer in Kelowna, BC."
+		/>
+		<meta property="og:image" content="/images/thumbnail.png" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="627" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
@@ -24,6 +34,25 @@
 	<body>
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
-		<script src="https://kit.fontawesome.com/91ce943063.js" crossorigin="anonymous"></script>
+		<!-- Hotjar Tracking Code for https://isaiahpaget.ca -->
+		<script>
+			(function (h, o, t, j, a, r) {
+				h.hj =
+					h.hj ||
+					function () {
+						(h.hj.q = h.hj.q || []).push(arguments);
+					};
+				h._hjSettings = { hjid: 3491218, hjsv: 6 };
+				a = o.getElementsByTagName("head")[0];
+				r = o.createElement("script");
+				r.async = 1;
+				r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+				a.appendChild(r);
+			})(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+		</script>
+		<script
+			src="https://kit.fontawesome.com/91ce943063.js"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
