everything is broken

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx"></script>
 		<!-- Hotjar Tracking Code for https://isaiahpaget.ca -->
-		<script>
+		<script defer>
 			(function (h, o, t, j, a, r) {
 				h.hj =
 					h.hj ||
