--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		content="Canadian software engineer skilled in full-stack development, passionately leading successful projects, and committed to crafting seamless, interactive apps." />
 	<meta property="og:url" content="https://isaiahpaget.ca/" />
 	<meta property="og:site_name" content="Isaiah Paget | Software Developer in Kelowna, BC." />
-	<meta property="og:image" content="/portfolio-site/images/thumbnail.png" />
+	<meta property="og:image" content="/images/thumbnail.png" />
 	<meta property="og:image:width" content="1200" />
 	<meta property="og:image:height" content="627" />
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
